// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser associative array literals allows a mix of quoted and unquoted keys 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": AALiteral {
      "close": {
        "isReserved": false,
        "kind": "RightBrace",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "}",
      },
      "elements": [
        {
          "name": BrsString {
            "inArray": false,
            "kind": 3,
            "value": "foo",
          },
          "value": Literal {
            "_location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "inArray": false,
              "kind": 4,
              "value": 1,
            },
          },
        },
        {
          "name": BrsString {
            "inArray": false,
            "kind": 3,
            "value": "bar",
          },
          "value": Literal {
            "_location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "inArray": false,
              "kind": 4,
              "value": 2,
            },
          },
        },
        {
          "name": BrsString {
            "inArray": false,
            "kind": 3,
            "value": "requires-hyphens",
          },
          "value": Literal {
            "_location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "inArray": false,
              "kind": 4,
              "value": 3,
            },
          },
        },
      ],
      "open": {
        "isReserved": false,
        "kind": "LeftBrace",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "{",
      },
    },
  },
]
`;

exports[`parser associative array literals allows separating properties with colons 1`] = `
[
  Function {
    "func": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [
          Assignment {
            "name": {
              "isReserved": false,
              "kind": "Identifier",
              "literal": undefined,
              "location": {
                "end": {
                  "column": -9,
                  "line": -9,
                },
                "start": {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "person",
            },
            "tokens": {
              "equals": {
                "isReserved": false,
                "kind": "Equal",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "=",
              },
            },
            "value": AALiteral {
              "close": {
                "isReserved": false,
                "kind": "RightBrace",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "}",
              },
              "elements": [
                {
                  "name": BrsString {
                    "inArray": false,
                    "kind": 3,
                    "value": "name",
                  },
                  "value": Literal {
                    "_location": {
                      "end": {
                        "column": -9,
                        "line": -9,
                      },
                      "start": {
                        "column": -9,
                        "line": -9,
                      },
                    },
                    "value": BrsString {
                      "inArray": false,
                      "kind": 3,
                      "value": "Bob",
                    },
                  },
                },
                {
                  "name": BrsString {
                    "inArray": false,
                    "kind": 3,
                    "value": "age",
                  },
                  "value": Literal {
                    "_location": {
                      "end": {
                        "column": -9,
                        "line": -9,
                      },
                      "start": {
                        "column": -9,
                        "line": -9,
                      },
                    },
                    "value": Int32 {
                      "inArray": false,
                      "kind": 4,
                      "value": 3,
                    },
                  },
                },
              ],
              "open": {
                "isReserved": false,
                "kind": "LeftBrace",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "{",
              },
            },
          },
        ],
      },
      "end": {
        "isReserved": false,
        "kind": "EndSub",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Sub",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": [],
      "returns": 11,
    },
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "main",
    },
  },
]
`;

exports[`parser associative array literals empty associative arrays on multiple lines 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": AALiteral {
      "close": {
        "isReserved": false,
        "kind": "RightBrace",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "}",
      },
      "elements": [],
      "open": {
        "isReserved": false,
        "kind": "LeftBrace",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "{",
      },
    },
  },
]
`;

exports[`parser associative array literals empty associative arrays on one line 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": AALiteral {
      "close": {
        "isReserved": false,
        "kind": "RightBrace",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "}",
      },
      "elements": [],
      "open": {
        "isReserved": false,
        "kind": "LeftBrace",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "{",
      },
    },
  },
]
`;

exports[`parser associative array literals filled arrays on multiple lines with commas 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": AALiteral {
      "close": {
        "isReserved": false,
        "kind": "RightBrace",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "}",
      },
      "elements": [
        {
          "name": BrsString {
            "inArray": false,
            "kind": 3,
            "value": "foo",
          },
          "value": Literal {
            "_location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "inArray": false,
              "kind": 4,
              "value": 1,
            },
          },
        },
        {
          "name": BrsString {
            "inArray": false,
            "kind": 3,
            "value": "bar",
          },
          "value": Literal {
            "_location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "inArray": false,
              "kind": 4,
              "value": 2,
            },
          },
        },
        {
          "name": BrsString {
            "inArray": false,
            "kind": 3,
            "value": "baz",
          },
          "value": Literal {
            "_location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "inArray": false,
              "kind": 4,
              "value": 3,
            },
          },
        },
      ],
      "open": {
        "isReserved": false,
        "kind": "LeftBrace",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "{",
      },
    },
  },
]
`;

exports[`parser associative array literals filled arrays on multiple lines without commas 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": AALiteral {
      "close": {
        "isReserved": false,
        "kind": "RightBrace",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "}",
      },
      "elements": [
        {
          "name": BrsString {
            "inArray": false,
            "kind": 3,
            "value": "foo",
          },
          "value": Literal {
            "_location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "inArray": false,
              "kind": 4,
              "value": 1,
            },
          },
        },
        {
          "name": BrsString {
            "inArray": false,
            "kind": 3,
            "value": "bar",
          },
          "value": Literal {
            "_location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "inArray": false,
              "kind": 4,
              "value": 2,
            },
          },
        },
        {
          "name": BrsString {
            "inArray": false,
            "kind": 3,
            "value": "baz",
          },
          "value": Literal {
            "_location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "inArray": false,
              "kind": 4,
              "value": 3,
            },
          },
        },
      ],
      "open": {
        "isReserved": false,
        "kind": "LeftBrace",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "{",
      },
    },
  },
]
`;

exports[`parser associative array literals filled arrays on one line 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": AALiteral {
      "close": {
        "isReserved": false,
        "kind": "RightBrace",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "}",
      },
      "elements": [
        {
          "name": BrsString {
            "inArray": false,
            "kind": 3,
            "value": "foo",
          },
          "value": Literal {
            "_location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "inArray": false,
              "kind": 4,
              "value": 1,
            },
          },
        },
        {
          "name": BrsString {
            "inArray": false,
            "kind": 3,
            "value": "bar",
          },
          "value": Literal {
            "_location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "inArray": false,
              "kind": 4,
              "value": 2,
            },
          },
        },
        {
          "name": BrsString {
            "inArray": false,
            "kind": 3,
            "value": "baz",
          },
          "value": Literal {
            "_location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "inArray": false,
              "kind": 4,
              "value": 3,
            },
          },
        },
      ],
      "open": {
        "isReserved": false,
        "kind": "LeftBrace",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "{",
      },
    },
  },
]
`;
